Fix layout problem with carousel
The carousel was being included on pages it did not need to be a part
of. This meant that the deposit agreement page would not render.

--- a/app/assets/stylesheets/home-page.scss
+++ b/app/assets/stylesheets/home-page.scss
@@ -1,37 +1,37 @@
 @import 'global';
 
 #content {
-	padding-top: 0px;
+    padding-top: 0px;
 }
 
 #home_header  {
-  background-image: none;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border-top: none;
-  border-bottom: 20px solid $background;
+    background-image: none;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-top: none;
+    border-bottom: 20px solid #F3F3F3;
 }
 
 .home_marketing_text {
-  background: rgba(255,255,255,0.85);
-  border-radius: 5px 5px 5px 5px;
-  color: black;
-  margin: 40px 0;
-  padding-bottom: 1em;
-  text-shadow: none;
+    background: rgba(255,255,255,0.85);
+    border-radius: 5px 5px 5px 5px;
+    color: black;
+    margin: 40px 0;
+    padding-bottom: 1em;
+    text-shadow: none;
 }
 
 .home_share_work {
-  background: rgba(255,255,255,0.85);
-  border-radius: 5px 5px 5px 5px;
-  margin: 1em 0;
-  padding: 1em;
+    background: rgba(255,255,255,0.85);
+    border-radius: 5px 5px 5px 5px;
+    margin: 1em 0;
+    padding: 1em;
 }
 
 .home_share_work p {
-  text-decoration: underline;
-  background-color: transparent;
+    text-decoration: underline;
+    background-color: transparent;
 }
 
 #grad1 {
@@ -40,92 +40,92 @@
 }
 
 #home_content {
+    padding: 0px 0px 10px 0px;
+    background: $background;
 
-	padding: 0px 0px 10px 0px;
-	background: $background;
-  .nav-tabs {
-  	background-color: $hokie-grey;
-  	border-bottom: 2px solid $hokie-orange;
-  	padding: 5px 0 0 5px;
+    .nav-tabs {
+        background-color: $hokie-grey;
+        border-bottom: 2px solid $hokie-orange;
+        padding: 5px 0 0 5px;
 
-  	li {
-  		margin-bottom: -2px;
-  	}
+        li {
+            margin-bottom: -2px;
+        }
 
-  	li a:link {
-  		color: white;
-  	}
+        li a:link {
+            color: white;
+        }
 
-  	li a:hover {
-  		background-color: $hokie-orange;
-  		border-color: $hokie-orange;
-  	}
+        li a:hover {
+            background-color: $hokie-orange;
+            border-color: $hokie-orange;
+        }
 
-  	li.active a {
-  		color: black;
-  		border-bottom: 2px solid white;
-  	}
+        li.active a {
+            color: black;
+            border-bottom: 2px solid white;
+        }
 
-  	li.active a:hover {
-  		background-color: white;
-  		border-color: white;
-  	}
-  }
-
-  .home-column-left {
-  	background-color: white;
-  	padding-right: 0px;
-  	@media only screen and (min-width: 768px) {border-right: 50px solid $background;};
-
-    .tab-content {
-      margin-left: -15px;
-      padding-right: 0px;
+        li.active a:hover {
+            background-color: white;
+            border-color: white;
+        }
     }
-  }
 
-  .home-column-right {
-  	background-color: white;
-  	  .home-panel {
-  		h2 {
-    		padding: 0.19em;
-    		margin-top: 0px;
-    		background-color: $hokie-grey;
-    		border-bottom: 2px solid $hokie-orange;
-    		color: white;
-  		}
+    .home-column-left {
+        background-color: white;
+        padding-right: 0px;
+        @media only screen and (min-width: 768px) {border-right: 50px solid $background;};
 
-  		.tag-toggle-list {
-  			float: right;
-  			margin: -3.6em 0.5em 0 0;
-  		}
- 	 }
-  }
+        .tab-content {
+            margin-left: -15px;
+            padding-right: 0px;
+        }
+    }
 
-  #homeTabs {
-  	margin-left: -15px;
-  }
+    .home-column-right {
+        background-color: white;
 
-  .home-column-left {
-    min-height: 250px;
-  }
+        .home-panel {
+            h2 {
+                padding: 0.19em;
+                margin-top: 0px;
+                background-color: $hokie-grey;
+                border-bottom: 2px solid $hokie-orange;
+                color: white;
+            }
 
-  .home-column-right {
-    min-height: 250px;
-  }
-  
+            .tag-toggle-list {
+                float: right;
+                margin: -3.6em 0.5em 0 0;
+            }
+        }
+    }
 
+    #homeTabs {
+        margin-left: -15px;
+    }
+
+    .home-column-left {
+        min-height: 250px;
+    }
+
+    .home-column-right {
+        min-height: 250px;
+    }
 }
 
-
 .home-info {
-  text-align: center;
-  color: #777777;
-  h1 {
-    font-size: 18px;
-    padding: 15px;
-    color: #444444;
-  }
-  img {
-    height: 85px;
-  }
+    text-align: center;
+    color: #777777;
+
+    h1 {
+        font-size: 18px;
+        padding: 15px;
+        color: #444444;
+    }
+
+    img {
+        height: 85px;
+    }
 }
